cabal-version:   3.0
name:            p2psim
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          ludihan
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

executable p2psim
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
