cabal-version:   3.0
name:            p2psim
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          ludihan
build-type:      Simple
extra-doc-files: README.md

executable p2psim
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -Wall
    build-depends:
        , ansi-terminal
        , base           ^>=4.18.3.0
        , containers
        , haskeline
        , megaparsec
        , text
        , toml-reader
        , random

    other-modules:
        Repl
        Simulator
        Types
